; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spi_flash/extr_spi_flash_chip_gd.c_spi_flash_chip_gd_set_io_mode.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spi_flash/extr_spi_flash_chip_gd.c_spi_flash_chip_gd_set_io_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@spi_flash_common_write_status_16b_wrsr = common dso_local global i32 0, align 4
@spi_flash_common_read_status_16b_rdsr_rdsr2 = common dso_local global i32 0, align 4
@spi_flash_common_write_status_8b_wrsr2 = common dso_local global i32 0, align 4
@spi_flash_common_read_status_8b_rdsr2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_flash_chip_gd_set_io_mode(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @WRSR_16B_REQUIRED(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  store i32 512, i32* %4, align 4
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = load i32, i32* @spi_flash_common_write_status_16b_wrsr, align 4
  %14 = load i32, i32* @spi_flash_common_read_status_16b_rdsr_rdsr2, align 4
  %15 = call i32 @spi_flash_common_set_io_mode(%struct.TYPE_4__* %12, i32 %13, i32 %14, i32 512)
  store i32 %15, i32* %2, align 4
  br label %21

16:                                               ; preds = %1
  store i32 2, i32* %5, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = load i32, i32* @spi_flash_common_write_status_8b_wrsr2, align 4
  %19 = load i32, i32* @spi_flash_common_read_status_8b_rdsr2, align 4
  %20 = call i32 @spi_flash_common_set_io_mode(%struct.TYPE_4__* %17, i32 %18, i32 %19, i32 2)
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %16, %11
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @WRSR_16B_REQUIRED(i32) #1

declare dso_local i32 @spi_flash_common_set_io_mode(%struct.TYPE_4__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
